--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@openrouter/sdk": "^0.1.27",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@upstash/ratelimit": "^0.4.3",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
-    "ai": "2.2.2",
+    "ai": "2.2.37",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.252.0",
     "next": "13.4.7",
-    "openai": "^4.0.0",
+    "openai": "4.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
